--- a/lab7.qsf
+++ b/lab7.qsf
@@ -57,3 +57,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE Lab7alt_material/lab7.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Lab7alt_material/font_rom.sv
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
